   the HTML entity files. About 1.72x faster in this area.

 * Added Element.is(query) to check if an element matches this CSS query.

 * Added new methods to Elements: next(query), nextAll(query), prev(query), prevAll(query) to select next and previous
   element siblings from a current selection, with optional selectors.

 * Added Node.root() to get the topmost ancestor of a Node.

 * Allow the Jsoup.Connect thread to be interrupted when reading the input stream; helps when reading from a long stream
   of data that doesn't read timeout.
   <https://github.com/jhy/jsoup/pull/712>

 * Jsoup.Connect now uses a desktop user-agent by default. Many users were getting caught by not specifying a
   user-agent, and so the default of 'Java' was used. That causes many servers to return different content than what
   they would to a desktop browser, and what the developer was expecting.

 * Increased the default connect/read timeout in Jsoup.Connect to 30 seconds.

 * Jsoup.Connect now detects if a header value is actually in UTF-8 vs the HTTP spec of ISO-8859, and converts
   the header value appropriately. This improves compatibility with servers that are configured incorrectly.

 * Bugfix: in Jsoup.Connect, URLs containing non-URL-safe characters were not encoded to URL safe correctly.
   <https://github.com/jhy/jsoup/issues/706>

 * Bugfix: a "SYSTEM" flag in doctype tags would be incorrectly removed.
   <https://github.com/jhy/jsoup/issues/408>

 * Bugfix: removing attributes from an Element with removeAttr() would cause a ConcurrentModificationException.

*** Release 1.10.1 [2016-Oct-23]
 * New feature: added the option to preserve case for tags and/or attributes, with ParseSettings. By default, the HTML
   parser will continue to normalize tag names and attribute names to lower case, and the XML parser will now preserve
   case, according to the relevant spec. The CSS selectors for tags and attributes remain case insensitive, per the CSS
   spec.
